--- a/src/components/Profile/profile.module.scss
+++ b/src/components/Profile/profile.module.scss
@@ -2,7 +2,7 @@
   padding: 30px;
   background-image: url("../../assets/bgrs/CAM00166.jpg");
   background-position: center;
-  
+
   margin-bottom: 20px;
 }
 
@@ -29,12 +29,12 @@
   .infoName {
     font-weight: bold;
     font-size: 16px;
-    color: wheat
+    color: wheat;
   }
   .infoDescr {
     text-align: right;
     font-size: 16px;
-    color: wheat
+    color: wheat;
   }
 }
 .status {
@@ -44,6 +44,25 @@
 .statusInfo {
   font-size: 16px;
 }
-.title{
-  color: wheat
+.title {
+  color: wheat;
+}
+.submitBtn {
+  color: #fff;
+  padding: 0 30px;
+  background: #1890ff;
+  border-color: #1890ff;
+  height: 40px;
+  text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+  box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
+  border-radius: 7px;
+
+  &:active,
+  &:focus {
+    outline: 0;
+  }
+  &:hover {
+    background: rgba(24, 144, 255, 0.7);
+    transform: transition 0.4s all;
+  }
 }
